# rtl87x2g_sdk

./: README.md
.github/workflows/: gcc-build.yml
bsp/boot/rtl87x2g/: startup_rtl.c  stdlib_wrapper.c  system_rtl.c  system_rtl_s.c
bsp/driver/adc/inc/: rtl_adc.h
bsp/driver/can/inc/: rtl_can.h
bsp/driver/dma/inc/: rtl_gdma.h
bsp/driver/gpio/inc/: rtl_gpio.h
bsp/driver/i2c/inc/: rtl_i2c.h
bsp/driver/i2s/inc/: rtl_i2s.h
bsp/driver/ir/inc/: rtl_ir.h
bsp/driver/keyscan/inc/: rtl_keyscan.h
bsp/driver/lpc/inc/: rtl_lpc.h
bsp/driver/nvic/inc/: rtl_nvic.h
bsp/driver/pinmux/inc/: rtl_pinmux.h
bsp/driver/qdec/inc/: rtl_aon_qdec.h
bsp/driver/rcc/inc/: rtl_rcc.h
bsp/driver/rtc/inc/: rtl_rtc.h
bsp/driver/spi/inc/: rtl_spi.h
bsp/driver/spi3w/inc/: rtl_spi3w.h
bsp/driver/tim/inc/: rtl_enh_tim.h  rtl_tim.h
bsp/driver/uart/inc/: rtl_uart.h
bsp/driver/utils/: rtl_utils.h
bsp/driver/wdt/inc/: rtl_aon_wdt.h  rtl_wdt.h
bsp/power/: io_dlps.c  io_dlps.h
bsp/sdk_lib/inc/: adc_lib.h  app_timer.h  cfg_item_api.h  clock.h  debug_monitor.h  fmc_api.h  ftl.h  pm.h  pmu_sample_code.h  rtl876x_lib_platform.h  stdlib_corecrt.h  vector_table_ext.h
include/rtl87x2g/: address_map.h  aes_api.h  app_msg.h  app_section.h  armv81mml_setting.h  crc16btx.h  flash_nor_device.h  fmc_platform.h  mem_types.h  otp.h  patch_header_check.h  psram.h  rtl876x.h  system_rtl876x.h  test_mode.h  trace.h  utils.h  vector_table.h  vector_table_auto_gen.h  wdt.h
include/rtl87x2g/config/: mem_config.h  otp_config.h
include/rtl87x2g/config/secure/: flash_map.h  mem_config.h
include/rtl87x2g/nsc/: aes_cmac_nsc.h  crypto_engine_nsc.h  nsc_veneer.h  utils_nsc.h
include/rtl87x2g/secure/: address_map.h  boot_rom_common_cfg.h  rtl876x.h  secure_rom_cfg.h
lib/bee4/: bee4-internal.axf
samples/usb/usb_hid_mouse/proj/: board.h  flash_map.h  mem_config.h  otp_config.h  version.h
samples/usb/usb_hid_mouse/src/: app_task.c  app_task.h  app_usb.c  main_ns.c  usb_dev.c  usb_dev.h  usb_msg.h
subsys/bluetooth/bt_host/inc/: ble_isoch_def.h  bt_direct_msg.h  bt_types.h  gap.h  gap_adv.h  gap_aox.h  gap_aox_conn.h  gap_aox_connless_receiver.h  gap_aox_connless_transmitter.h  gap_big_mgr.h  gap_bond_le.h  gap_bond_manager.h  gap_callback_le.h  gap_chann.h  gap_cig_mgr.h  gap_conn_le.h  gap_credit_based_conn.h  gap_dtm.h  gap_ecfc.h  gap_ext_adv.h  gap_ext_scan.h  gap_iso_data.h  gap_le.h  gap_le_rf.h  gap_le_types.h  gap_msg.h  gap_pa_adv.h  gap_pa_sync.h  gap_past_recipient.h  gap_past_sender.h  gap_privacy.h  gap_scan.h  gap_storage_le.h  gatt.h  gatt_builtin_services.h  profile_client.h  profile_client_def.h  profile_client_ext.h  profile_def.h  profile_server.h  (+2 more)
subsys/bluetooth/gap_ext/inc/: gap_config.h  gap_lib_le.h  gap_vendor.h
subsys/debug/system_trace_lib/inc/: system_trace.c  system_trace.h  trace_common.h  trace_config.h  trace_heap.h  trace_port_config.h  trace_queue.h  trace_stack.h  trace_system_loading.h  trace_timer.h
subsys/dfu/: ble_dfu_transport.c  ble_dfu_transport.h  dfu_app.c  dfu_app.h  dfu_common.c  dfu_common.h  dfu_main.c  dfu_main.h  dfu_service.c  dfu_service.h  dfu_task.c  dfu_task.h  ota_service.c  ota_service.h
subsys/freertos/: FreeRTOS.h  FreeRTOSConfig.h  atomic.h  croutine.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  portable.h  portasm.h  portmacro.h  queue.h  secure_context.h  secure_init.h  stack_macros.h  stream_buffer.h  task.h  timers.h
subsys/lwip/for_matter/: lwip.cmake
subsys/lwip/for_matter/arch/: cc.h  lwipopts.h  perf.h  sys_arch.c  sys_arch.h
subsys/lwip/repo/api/: api_lib.c  api_msg.c  netdb.c  netifapi.c  sockets.c  tcpip.c
subsys/lwip/repo/core/: altcp.c  altcp_tcp.c  dns.c  inet_chksum.c  init.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
subsys/lwip/repo/netif/: bridgeif.c  bridgeif_fdb.c  ethernet.c  lowpan6.c  lowpan6_ble.c  lowpan6_common.c  slipif.c
subsys/mac_driver/: mac_data_type.h  mac_driver.h  mac_stats.h  power_manager_unit_zbmac.h  zb_section.h
subsys/mac_driver/portable/bee4/: bee4-internal.axf  mac_driver_mpan.h
subsys/mac_driver/portable/rtl87x2g/: mac_driver_mpan.h  rtl87x2g-internal.axf
subsys/matter/: CMakeLists.txt  CMakePresets.json  includepath.cmake
subsys/mbedtls/: mbedtls-config.h
subsys/mbedtls/port/inc/: crypto_accel_dispatch.h  crypto_hw_locks.h  ecdsa_alt.h  ecp_alt.h  platform_alt.h  sha256_alt.h  threading_alt.h  trng_alt.h
subsys/mbedtls/port/src/: aes_alt.c  (+9 more)
subsys/osif/freertos/: osif_freertos.c  osif_freertos.h
subsys/osif/inc/: os_mem.h  os_msg.h  os_pm.h  os_pool.h  os_queue.h  os_sched.h  os_sync.h  os_task.h  os_timer.h  os_trace.h
subsys/osif/src/: os_mem.c  os_msg.c  os_pm.c  os_pool.c  os_queue.c  os_sched.c  os_sync.c  os_task.c  os_timer.c  os_trace.c
subsys/usb/inc/: port_macro.h
tools/AppData/: APP Data Tool Quick Start Guide CN.docx  APP Data Tool Quick Start Guide EN.docx
tools/AppData/AppData1/: run.bat
tools/AppData/AppData2/: run.bat
tools/AppData/AppData3/: run.bat
tools/AppData/AppData4/: run.bat
tools/AppData/AppData5/: run.bat
tools/AppData/AppData6/: run.bat
tools/AppData/SecureAPPData/: mp.ini  run.bat
tools/MergeBin/: README
tools/MergeImageTool/: MergeImageTool.bat  MergeandSignImageTool.bat  OTAHeader_Bank0.hex  OTAMergeImageTool.bat  README  mp.ini
tools/MergeTraceTool/: MergeTraceTool.bat  README  ROM.trace  app.trace
tools/MergeTraceTool/input/: ROM.trace  ROM_NS.trace  app_ns.trace  app_s.trace
tools/SignImage/: README
tools/SignImage/SignKeys/: SignImage.bat  ecdsa_public_key_hash.c  ecdsa_public_key_hash.h
tools/UserData/: README
tools/UserData/UserData1/: mp.ini  run.bat
tools/UserData/UserData2/: mp.ini  run.bat
tools/UserData/UserData3/: mp.ini  run.bat
tools/UserData/UserData4/: mp.ini  run.bat
tools/UserData/UserData5/: mp.ini  run.bat
tools/UserData/UserData6/: mp.ini  run.bat
tools/UserData/UserData7/: mp.ini  run.bat
tools/UserData/UserData8/: mp.ini  run.bat
tools/flash/: README.txt  RTL876x_LOG_TRACE.FLM  RTL87x2G_FLASH.FLM
(+504 files in other folders)
